# audio_visualizer

./: COOL_SHADERS.md  Cargo.toml  NOTES.md  README.md
shaders/: blue_led_shader.wgsl  circular.wgsl  cube_field.wgsl  fur_space_3.wgsl  heart.wgsl  led_shader.wgsl  log_scaling.wgsl.bak  multi_line.wgsl
src/: audio_processor.rs  camera.rs  egui_wgpu_backend.rs  egui_winit_platform.rs  enumerate.rs  fft_buffer.rs  led_shader.wgsl  main.rs  renderer.rs  shader.wgsl  shader_prelude.wgsl  shaders.rs  st101.wgsl  state.rs  texture.rs  ui.rs
src/egui_integration/: egui_shader.wgsl  wgpu.rs  winit.rs
