[package]
name = "audio_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

winit = "0.26"
wgpu = "0.12"
glam = { version = "0.20", features = [ "bytemuck", "rand"] }
bytemuck = { version = "1.9", features = [ "derive" ] }

image = "0.24"

ringbuf = "0.2"
rustfft = "6.0"
cpal = "0.13"
